--- a/quiz-3.html
+++ b/quiz-3.html
@@ -22,7 +22,7 @@
 
             $('.btnGreen').click(function(){
                 if($('.active').length) {
-                    window.location.href = 'https://codigoslucrativosoficial.fun/index.php/nova/'
+                    window.location.href = 'https://secure.doppus.com/pay/PBHHBZMBHHBZG9059BH'
                 }
             });
 
