--- a/quiz-5.html
+++ b/quiz-5.html
@@ -22,16 +22,16 @@
 
             $('.btnGreen').click(function(){
                 if($('.active').length) {
-                    window.location.href = './quiz-4.html'
+                    window.location.href = './quiz-6.html'
                 }
             });
 
             
-            var finalValue = 215;
+            var finalValue = 400;
                 var duration = 1000; // Duração da animação em milissegundos (2 segundos neste exemplo)
                 var increment = finalValue / (duration / 100); // Incremento a cada 100ms
 
-                var currentValue = 121;
+                var currentValue = 305;
                 var interval = setInterval(function() {
                     if (currentValue < finalValue) {
                         currentValue += increment;
@@ -50,15 +50,15 @@
         <img src="./codluc-1.png" alt="">
         <div>
             <span>R$</span>
-            <span id="money">121</span>,34
+            <span id="money">305</span>,34
         </div>
     </header>
     <div class="card-grey">
         Saldo Atualizado
-        <p style="font-size: 15px;">Você recebeu R$94,00 pelo código da Adidas.</p>
+        <p style="font-size: 15px;">Você recebeu R$90,00 pelo código do Nubank.</p>
     </div>
     <div class="card">
-        <img src="./nike.jpg" alt="">
+        <img src="./Banco_Bradesco_logo_(horizontal).png" alt="">
         <h4>CÓDIGO GERADO ABAIXO!</h4>
         <div class="codigo">TYO40XE</div>
         <h4 style="font-size: 19px;">Para Confirmar que você é um HUMANO escolha abaixo qual desses códigos é o seu que foi gerado!</h4>
