--- a/quiz-4.html
+++ b/quiz-4.html
@@ -60,7 +60,7 @@
     <div class="card">
         <img src="./Nubank_logo.svg.png" alt="">
         <h4>CÓDIGO GERADO ABAIXO!</h4>
-        <div class="codigo">TYO40XE</div>
+        <div class="codigo">QW79ERV</div>
         <h4 style="font-size: 19px;">Para Confirmar que você é um HUMANO escolha abaixo qual desses códigos é o seu que foi gerado!</h4>
         <div class="opcoes">
             <div class="opcao">
