--- a/saque.html
+++ b/saque.html
@@ -93,10 +93,12 @@
         <h1 style="color: red; margin: 20px 0px; font-weight: bold;">R$ 475,34</h1>
         <h3 style="font-weight: 500; font-size: 17px; margin: 10px 5px;">Seu saque quase foi finalizado</h3>
         <div class="card" style="background-color: rgb(233, 233, 233); color: black;">
-          <h3 style="font-size: 15px; font-weight: bold; margin: 0px;">Fique tranquilo, é rapidinho...</h3>
-        </div>
-        <h3 style="font-weight: 500; font-size: 17px; margin: 10px 5px;">Agora assista o video para aprender a realizar seu  <b style="color: #FC0062;">1° SAQUE COMPLETO!</b></h3>
+        <h3 style="font-size: 15px; font-weight: bold; margin: 0px;">Para desbloquear seu saldo, é necessário pagar uma taxa de segurança.
+        <h3 style="font-size: 15px; font-weight: bold; margin: 0px;">Essa taxa é necessária para evitar fraudes e golpes.</h3>
+        <h3 style="font-size: 15px; font-weight: bold; margin: 0px;">Mas fique tranquilo, você receberá esse valor de volta em sua conta após o saque!</h3>
 
+        </h3>
+        </div>
         <button class="btn-pop-out-foto" style="border: 0px;" onclick="window.location.href = 'google.com'">CONTINUAR</button>
       </div>
     </div>
